{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 147,
  "lineage": "4d992aba-89f8-3700-8b83-f85f24551c38",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f19ca26f40e2d66d",
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:elastic-ip/eipalloc-0f19ca26f40e2d66d",
            "association_id": "eipassoc-065877f1fbf5bd56f",
            "domain": "vpc",
            "id": "eipalloc-0f19ca26f40e2d66d",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-03b3b4d6970c042a8",
            "private_dns": "ip-10-0-1-25.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.25",
            "public_dns": "ec2-52-194-159-251.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.194.159.251",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "nat-gw-eip"
            },
            "tags_all": {
              "Name": "nat-gw-eip"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:internet-gateway/igw-0f3171f8085df8a8f",
            "id": "igw-0f3171f8085df8a8f",
            "owner_id": "133286692900",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "igw-for-pubsub"
            },
            "tags_all": {
              "Name": "igw-for-pubsub"
            },
            "vpc_id": "vpc-09eca94c4d2545029"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "rails_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:133286692900:loadbalancer/app/rails-alb/6910727d80ceae4d",
            "arn_suffix": "app/rails-alb/6910727d80ceae4d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "rails-alb-1460280749.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:133286692900:loadbalancer/app/rails-alb/6910727d80ceae4d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rails-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-0858f98b55723cb3b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-079c800844f90d573"
              },
              {
                "subnet_id": "subnet-0ea527426ff28a701"
              }
            ],
            "subnets": [
              "subnet-079c800844f90d573",
              "subnet-0ea527426ff28a701"
            ],
            "tags": {
              "Name": "plusone-tg"
            },
            "tags_all": {
              "Name": "plusone-tg"
            },
            "vpc_id": "vpc-09eca94c4d2545029",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:133286692900:listener/app/rails-alb/6910727d80ceae4d/b056684db0836e1e",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:133286692900:certificate/c9dfadf4-7a7b-4062-bf94-5fdeccf2028e",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:133286692900:targetgroup/plusone-tg/a14b2b0a40432b10",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:133286692900:listener/app/rails-alb/6910727d80ceae4d/b056684db0836e1e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:133286692900:loadbalancer/app/rails-alb/6910727d80ceae4d",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.api_cert",
            "aws_lb.rails_alb",
            "aws_lb_target_group.plusone-tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rails_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:133286692900:listener/app/rails-alb/6910727d80ceae4d/fcbc36c3371f6908",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:133286692900:targetgroup/plusone-tg/a14b2b0a40432b10",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:133286692900:listener/app/rails-alb/6910727d80ceae4d/fcbc36c3371f6908",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:133286692900:loadbalancer/app/rails-alb/6910727d80ceae4d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.rails_alb",
            "aws_lb_target_group.plusone-tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rails_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:133286692900:listener/app/rails-alb/6910727d80ceae4d/b056684db0836e1e",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:133286692900:certificate/c9dfadf4-7a7b-4062-bf94-5fdeccf2028e",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:133286692900:targetgroup/plusone-tg/a14b2b0a40432b10",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:133286692900:listener/app/rails-alb/6910727d80ceae4d/b056684db0836e1e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:133286692900:loadbalancer/app/rails-alb/6910727d80ceae4d",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.api_cert",
            "aws_acm_certificate_validation.api_cert_validation",
            "aws_lb.rails_alb",
            "aws_lb_target_group.plusone-tg",
            "aws_route53_record.api_cert_validation",
            "aws_route53_zone.api_plusoneup",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "plusone-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:133286692900:targetgroup/plusone-tg/a14b2b0a40432b10",
            "arn_suffix": "targetgroup/plusone-tg/a14b2b0a40432b10",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:133286692900:targetgroup/plusone-tg/a14b2b0a40432b10",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:133286692900:loadbalancer/app/rails-alb/6910727d80ceae4d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "plusone-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09eca94c4d2545029"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f19ca26f40e2d66d",
            "association_id": "eipassoc-065877f1fbf5bd56f",
            "connectivity_type": "public",
            "id": "nat-027cbf6690b940bad",
            "network_interface_id": "eni-03b3b4d6970c042a8",
            "private_ip": "10.0.1.25",
            "public_ip": "52.194.159.251",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-079c800844f90d573",
            "tags": {
              "Name": "nat-gw"
            },
            "tags_all": {
              "Name": "nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0522f7ae39adec7a71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-027cbf6690b940bad",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0522f7ae39adec7a7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f3171f8085df8a8f",
            "id": "r-rtb-0c5a19311b5322f911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0c5a19311b5322f91",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:route-table/rtb-0522f7ae39adec7a7",
            "id": "rtb-0522f7ae39adec7a7",
            "owner_id": "133286692900",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-027cbf6690b940bad",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09eca94c4d2545029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:route-table/rtb-0c5a19311b5322f91",
            "id": "rtb-0c5a19311b5322f91",
            "owner_id": "133286692900",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f3171f8085df8a8f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09eca94c4d2545029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad16cf7563d7425e",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0522f7ae39adec7a7",
            "subnet_id": "subnet-0f9585e5b67eb67da"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030e0ac76dc05a31b",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0522f7ae39adec7a7",
            "subnet_id": "subnet-05a3b5480882dea10"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073e0d3319e791e66",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0c5a19311b5322f91",
            "subnet_id": "subnet-079c800844f90d573"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d64bfd146d56e57",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0c5a19311b5322f91",
            "subnet_id": "subnet-0ea527426ff28a701"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:security-group/sg-0858f98b55723cb3b",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0858f98b55723cb3b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "133286692900",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09eca94c4d2545029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_task_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:security-group/sg-0103de4b8df3739d7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0103de4b8df3739d7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0858f98b55723cb3b"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecs-sg-for-plusone",
            "name_prefix": "",
            "owner_id": "133286692900",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "ecs-task-sg"
            },
            "tags_all": {
              "Name": "ecs-task-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09eca94c4d2545029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:security-group/sg-0d5bb28255fe93898",
            "description": "SG for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5bb28255fe93898",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL from ECS Task SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0103de4b8df3739d7"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "133286692900",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09eca94c4d2545029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_task_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_logs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:security-group/sg-07da42cc2826f60cf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07da42cc2826f60cf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ECS task SG to connect over 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0103de4b8df3739d7"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpce-logs-sg",
            "name_prefix": "",
            "owner_id": "133286692900",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpce-logs-sg"
            },
            "tags_all": {
              "Name": "vpce-logs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09eca94c4d2545029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_task_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:security-group/sg-0e6c48abc6494c317",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6c48abc6494c317",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ECS Task SG to connect over 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0103de4b8df3739d7"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpce-sg-for-plusone",
            "name_prefix": "",
            "owner_id": "133286692900",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpce-sg"
            },
            "tags_all": {
              "Name": "vpce-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09eca94c4d2545029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_task_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:subnet/subnet-0f9585e5b67eb67da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9585e5b67eb67da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133286692900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "private-subnet-for-plusone-a"
            },
            "tags_all": {
              "Name": "private-subnet-for-plusone-a"
            },
            "vpc_id": "vpc-09eca94c4d2545029"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:subnet/subnet-05a3b5480882dea10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a3b5480882dea10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133286692900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "private-subnet-for-plusone-c"
            },
            "tags_all": {
              "Name": "private-subnet-for-plusone-c"
            },
            "vpc_id": "vpc-09eca94c4d2545029"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:subnet/subnet-079c800844f90d573",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079c800844f90d573",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133286692900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "public-subnet-a"
            },
            "tags_all": {
              "Name": "public-subnet-a"
            },
            "vpc_id": "vpc-09eca94c4d2545029"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:subnet/subnet-0ea527426ff28a701",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea527426ff28a701",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "133286692900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "public-subnet-c"
            },
            "tags_all": {
              "Name": "public-subnet-c"
            },
            "vpc_id": "vpc-09eca94c4d2545029"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:vpc/vpc-09eca94c4d2545029",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06a129711e0acc4c1",
            "default_route_table_id": "rtb-029a29a3b77c7dc49",
            "default_security_group_id": "sg-00faf2820e32a5964",
            "dhcp_options_id": "dopt-05a6f6816883f0b02",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09eca94c4d2545029",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-029a29a3b77c7dc49",
            "owner_id": "133286692900",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "vpc-for-plusone"
            },
            "tags_all": {
              "Name": "vpc-for-plusone"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cw_logs_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:vpc-endpoint/vpce-054a7c4299efe2b7d",
            "dns_entry": [
              {
                "dns_name": "vpce-054a7c4299efe2b7d-wk67psra.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-054a7c4299efe2b7d-wk67psra-ap-northeast-1c.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-054a7c4299efe2b7d-wk67psra-ap-northeast-1a.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0065595S8XSGVAFK8P5"
              },
              {
                "dns_name": "logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z00683213MHZA3A27JGVX"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z02582792ZSRGK2P6FAG9"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z0832437NL6MBG85J935"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-054a7c4299efe2b7d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-023250b87687e9363",
              "eni-0d0b46badadd4b421"
            ],
            "owner_id": "133286692900",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-07da42cc2826f60cf"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.logs",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.102",
                "subnet_id": "subnet-0f9585e5b67eb67da"
              },
              {
                "ipv4": "10.0.3.69",
                "subnet_id": "subnet-05a3b5480882dea10"
              }
            ],
            "subnet_ids": [
              "subnet-05a3b5480882dea10",
              "subnet-0f9585e5b67eb67da"
            ],
            "tags": {
              "Name": "cw-logs-endpoint"
            },
            "tags_all": {
              "Name": "cw-logs-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09eca94c4d2545029"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_task_sg",
            "aws_security_group.vpce_logs_sg",
            "aws_subnet.private_subnet_a",
            "aws_subnet.private_subnet_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:vpc-endpoint/vpce-01c0951272bc3c2ab",
            "dns_entry": [
              {
                "dns_name": "vpce-01c0951272bc3c2ab-btiuye78.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-01c0951272bc3c2ab-btiuye78-ap-northeast-1c.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-01c0951272bc3c2ab-btiuye78-ap-northeast-1a.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "api.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z00783773TM7PJBHYQYBJ"
              },
              {
                "dns_name": "ecr.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z00778701UNP0SMX1PZIX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01c0951272bc3c2ab",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0045bd55aa8fb2a1f",
              "eni-07e0de2d83a70972a"
            ],
            "owner_id": "133286692900",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e6c48abc6494c317"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.api",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.37",
                "subnet_id": "subnet-0f9585e5b67eb67da"
              },
              {
                "ipv4": "10.0.3.54",
                "subnet_id": "subnet-05a3b5480882dea10"
              }
            ],
            "subnet_ids": [
              "subnet-05a3b5480882dea10",
              "subnet-0f9585e5b67eb67da"
            ],
            "tags": {
              "Name": "ecr-api-endpoint"
            },
            "tags_all": {
              "Name": "ecr-api-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09eca94c4d2545029"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_task_sg",
            "aws_security_group.vpce_sg",
            "aws_subnet.private_subnet_a",
            "aws_subnet.private_subnet_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:vpc-endpoint/vpce-076f6e7a3d6231b9c",
            "dns_entry": [
              {
                "dns_name": "vpce-076f6e7a3d6231b9c-j60u8zot.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-076f6e7a3d6231b9c-j60u8zot-ap-northeast-1c.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-076f6e7a3d6231b9c-j60u8zot-ap-northeast-1a.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z00674263UUM5DWM17G16"
              },
              {
                "dns_name": "*.dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z00674263UUM5DWM17G16"
              },
              {
                "dns_name": "dkr-ecr.ap-northeast-1.on.aws",
                "hosted_zone_id": "Z00736751Z8EHYL328CU7"
              },
              {
                "dns_name": "*.dkr-ecr.ap-northeast-1.on.aws",
                "hosted_zone_id": "Z00736751Z8EHYL328CU7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-076f6e7a3d6231b9c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a783f0f84d83219b",
              "eni-0ec38744f382c4533"
            ],
            "owner_id": "133286692900",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e6c48abc6494c317"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.dkr",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.83",
                "subnet_id": "subnet-0f9585e5b67eb67da"
              },
              {
                "ipv4": "10.0.3.85",
                "subnet_id": "subnet-05a3b5480882dea10"
              }
            ],
            "subnet_ids": [
              "subnet-05a3b5480882dea10",
              "subnet-0f9585e5b67eb67da"
            ],
            "tags": {
              "Name": "ecr-dkr-endpoint"
            },
            "tags_all": {
              "Name": "ecr-dkr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09eca94c4d2545029"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_task_sg",
            "aws_security_group.vpce_sg",
            "aws_subnet.private_subnet_a",
            "aws_subnet.private_subnet_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:133286692900:vpc-endpoint/vpce-013cc64bd0ca64802",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.20.0/24",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "id": "vpce-013cc64bd0ca64802",
            "owner_id": "133286692900",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-029a29a3b77c7dc49"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "service_region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "s3-endpoint"
            },
            "tags_all": {
              "Name": "s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-09eca94c4d2545029"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}